# braidedSP

./: .gitignore  LICENSE  README.md  environment.txt  pyproject copy.toml  pyproject.toml
braidedSP/: centerline.py  mask.py  river.py  swot.py  tools.py
braided_rivers/: braided.py  procBraided.py  skeletonize_func.py  tools.py
example_data/brahmaputra_aoi/: brahmaputra_aoi.shp
example_data/brahmaputra_single_centerline/: brahmaputra_single_centerline.shp  brahmaputra_single_centerline.shx
example_data/bramaputra_aoi/: brahmaputra_aoi.shx
examples/: braidedSP_workflow.ipynb  full_workflow.ipynb
examples/example_data/brahmaputra_aoi/: brahmaputra_aoi.dbf
examples/example_data/brahmaputra_single_centerline/: brahmaputra_single_centerline.dbf
examples/example_data/brahmaputra_starting_line/: brahmaputra_starting_line.shp  brahmaputra_starting_line.shx
notebooks/: Example_A.ipynb  full_workflow.ipynb  gen_centerlines_niger.ipynb  width_analysis.ipynb
publication/: README.md
publication/notebooks/: gen_centerlines.ipynb  read_pixc.ipynb  view_BraidedSP.ipynb
publication/tools/: procBraided.py  skeletonize_func.py
scripts/: bulk_process.py  gen_centerlines_niger.ipynb  getChannels.ipynb  label_skeleton.py  main.py  plotting.py  skeletonize_func.py  tools.py
tools/: procBraided.py  skeletonize_func.py
