[project]
authors = [{name = "connorchewning", email = "62517413+connorchewning@users.noreply.github.com"}]
dependencies = []
name = "braided_rivers"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["./braidedSP"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = "==3.13.2"
ipykernel = "==6.29.5"
tqdm = "==4.67.1"
geopandas = "==1.0.1"
rasterio = "==1.4.3"
gdal = "==3.10.2"  # Keep fixed; tightly coupled with rasterio
matplotlib = ">=3.10.0"
contextily = ">=1.6.2"
ruff = ">=0.10.0"
scipy = "==1.15.2"
scikit-learn = "==1.6.1"
scikit-image = "==0.25.2"
xarray = "==2025.1.1"
dask = "==2025.7.0"
h5netcdf = "==1.6.1"


[tool.pixi.pypi-dependencies]
braided_rivers = { path = ".", editable = true }

[tool.pixi.tasks]
