[project]
authors = [{name = "connorchewning", email = "62517413+connorchewning@users.noreply.github.com"}]
dependencies = [
    "tqdm >=4.67.1",
    "rasterio ==1.4.3",
    "rioxarray >=0.19.0,<0.20",
    "xarray >=2025.1.1",
    "geopandas >=1.0.1",
    "scipy >=1.15.2",
    "scikit-learn >=1.6.1",
    "scikit-image >=0.25.2",
    "netcdf4 == 1.6.5",
    "matplotlib >=3.10.0",
    "contextily >=1.6.2"
]

name = "braidedSP"
requires-python = ">=3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["./braidedSP"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.9"
ipykernel = ">=6.29.5"
gdal = "==3.10.2"

[tool.pixi.pypi-dependencies]
braidedSP = { path = ".", editable = true }


[tool.pixi.tasks]
